--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,10 @@ tasks.withType(JavaCompile) {
 }
 
 test {
-    String tags = System.getProperty("tags") != null ? System.getProperty("tags") : "smoke"
-    useJUnitPlatform {
-        includeTags tags
-    }
-    //useJUnitPlatform()
+//    String tags = System.getProperty("tags") != null ? System.getProperty("tags") : "smoke"
+//    useJUnitPlatform {
+//        includeTags tags
+//    }
+    useJUnitPlatform()
     //в консоли -     ./gradlew --info clean test -Dtags=smoke
 }
